--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ nav.mobile-menu{
     height:32px;
     background-size: 100% 100%;
     cursor:pointer;
-    background-image:url(/images/icon_menu.png);
+    background-image:url(./images/icon_menu.png);
     display:none;
 }
 
@@ -88,7 +88,7 @@ section.banner{
     width:100%;
     height:650px;
     background-color: black;
-    background-image: url(/images/bg.jpg);
+    background-image: url(./images/bg.jpg);
     background-size: contain;
     background-position: right bottom;
     background-repeat: no-repeat;
@@ -108,7 +108,7 @@ section.banner{
     text-transform: uppercase;
     color:white;
     font-size: 23px;
-    background-image:url(/images/box-text.png);
+    background-image:url(./images/box-text.png);
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
@@ -136,7 +136,7 @@ section.banner{
     position: relative;
     left:-30px;
     line-height: 70px;
-    background-image:url(/images/box-white-text.png);
+    background-image:url(./images/box-white-text.png);
 }
 
 section.veiculos-destaque{
@@ -573,7 +573,7 @@ section.venda-single .container{
     cursor:pointer;
     transform: translateY(-50%);
     -ms-transform: translateY(-50%);
-    background-image: url(/images/arrow-left.png);
+    background-image: url(./images/arrow-left.png);
     background-size:100% 100%;
     width:22px;
     height:22px;
@@ -586,7 +586,7 @@ section.venda-single .container{
     cursor:pointer;
     transform: translateY(-50%);
     -ms-transform: translateY(-50%);
-    background-image: url(/images/arrow-right.png);
+    background-image: url(./images/arrow-right.png);
     background-size:100% 100%;
     width:22px;
     height:22px;
